fix div .install app, and overflow main-content

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ img{
 .vh-wrapper{
     height: 100vh;
     width: 100%;
-    overflow-y: auto;
 }
 .padding-ul-raw{
     padding: 5px 10px;
@@ -123,6 +122,7 @@ main{
     width: calc(100% - 250px);
     height: 100%;
     padding-top: 80px;
+    overflow-y: auto;
 }
 #main-menu li{
     padding: 5px 10px;
@@ -174,7 +174,7 @@ main{
 }
 .p-absolute-bottom{
     position: absolute;
-    bottom: 0;
+    bottom: -25px;
     left: 0;
     width: 100%;
     padding: 20px;
